--- a/FinalWebRepoUX-main/src/App.css
+++ b/FinalWebRepoUX-main/src/App.css
@@ -6,18 +6,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(79deg, #7439db, #C66FBC 48%, #F7944D);
+  background: #6244bb !important;
 }
 
-.App {
- /* text-align: center;*/
-  display: flex;
-  min-height: 100vh;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  background-image: linear-gradient(79deg, #7439db, #C66FBC 48%, #F7944D);
-}
+
 
 .auth-form-container,
 .login-form,
@@ -126,19 +118,25 @@ button {
 
 /* Add this CSS to your App.css or a separate stylesheet */
 .header-separator {
-  border-top: 2px solid #fff; /* Adjust the width and color as needed */
-  margin-top: 10px; /* Adjust the margin as needed */
+  border-top: 2px solid #fff;
+  /* Adjust the width and color as needed */
+  margin-top: 10px;
+  /* Adjust the margin as needed */
 }
 
 /* Optional: Increase the space between the header and content */
 .container {
-  margin-top: 20px; /* Adjust the margin as needed */
+  margin-top: 20px;
+  /* Adjust the margin as needed */
 }
 
 /* Resize the logo */
 .logo {
-  width: 60px; /* Adjust the width as needed */
-  height: auto; /* Maintain aspect ratio */
-  border-radius: 50%; /* Makes the image circular */
-  overflow: hidden; 
+  width: 200px;
+  /* Adjust the width as needed */
+  height: auto;
+  /* Maintain aspect ratio */
+  overflow: hidden;
+
+
 }
